--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -17,6 +17,19 @@
         width: 99%;
         margin-top: 28%;
     }
+    .deliveryManImg {
+        position: absolute;
+        width: 25.4375rem;
+        height: 20.625rem;
+        margin-top: 18%;
+        margin-left: -30%;
+    }
+    .deliveryMapImg {
+        width: 15.8125rem;
+        height: 12.3125rem;
+        margin-left: 30%;
+    }
+
 }
 
 /*// Large devices (desktops, 992px and up)*/
@@ -33,6 +46,18 @@
         width: 98%;
         margin-top: 8%;
     }
+    .deliveryManImg {
+        position: absolute;
+        width: 25.4375rem;
+        height: 20.625rem;
+        margin-top: -8%;
+        margin-left: -8%;
+    }
+    .deliveryMapImg {
+        width: 15.8125rem;
+        height: 12.3125rem;
+    }
+
 }
 
 /*// X-Large devices (large desktops, 1200px and up)*/
@@ -44,6 +69,14 @@
     .main-offer {
         margin-top: 8%;
     }
+    .deliveryManImg {
+        position: absolute;
+        width: 44.1875rem;
+        height: 33.125rem;
+        margin-top: -8%;
+        margin-left: -8%;
+    }
+
 }
 
 /*// XX-Large devices (larger desktops, 1400px and up)*/
@@ -55,4 +88,12 @@
     .main-offer {
         margin-top: 8%;
     }
+    .deliveryManImg {
+        position: absolute;
+        width: 44.1875rem;
+        height: 33.125rem;
+        margin-top: -8%;
+        margin-left: -8%;
+    }
+
 }
