--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 html, body {
     font-family: 'Montserrat', sans-serif;
-    background: rgb(20, 20, 20);
-    background: linear-gradient(90deg, rgba(20, 20, 20, 1) 0%, rgba(52, 52, 52, 1) 50%);
+    background: #000;
+    /*background: rgb(20, 20, 20);*/
+    /*background: linear-gradient(90deg, rgba(20, 20, 20, 1) 0%, rgba(52, 52, 52, 1) 50%);*/
+}
+body {
+    background-image: url('../img/centipede.png');
+}
+
+.section-8 {
+    background-image: url('../img/mrWho.png');
 }
 
 .bor-r-50 {
@@ -40,9 +48,9 @@ html, body {
     color: #FFD58D;
     font-style: normal;
     font-weight: bold;
-    font-size: 15px;
+    /*font-size: 15px;
     line-height: 18px;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.1em;*/
     text-transform: uppercase;
 }
 
