--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -9,6 +9,9 @@
     .displayNone {
         display: none;
     }
+    .section-3 {
+        display: none;
+    }
 }
 
 /*// Medium devices (tablets, 768px and up)*/
@@ -39,6 +42,13 @@
         height: 52.5rem;
     }
     .displayNone {
+        display: none;
+    }
+    .videoReviewsMobile {
+        width: 300px;
+        height: 150px;
+    }
+    .section-3 {
         display: none;
     }
 
@@ -75,6 +85,16 @@
     .displayNone {
         display: block;
     }
+    .nav-link {
+        font-size: 14px;
+    }
+    .videoReviewsMobile {
+        width: 400px;
+        height: 200px;
+    }
+    .section-3 {
+        display: block;
+    }
 
 }
 
@@ -100,6 +120,13 @@
     .displayNone {
         display: block;
     }
+    .videoReviewsMobile {
+        width: 600px;
+        height: 300px;
+    }
+    .section-3 {
+        display: block;
+    }
 
 }
 
@@ -123,6 +150,13 @@
         height: 62.5rem;
     }
     .displayNone {
+        display: block;
+    }
+    .videoReviewsMobile {
+        width: 600px;
+        height: 300px;
+    }
+    .section-3 {
         display: block;
     }
 
