--- a/css/style.css
+++ b/css/style.css
@@ -297,15 +297,17 @@ radial-gradient(151.31 % 151.31 % at 50 % - 10.62 %, #FFD58D 0 %, #FFDF6D 48.99 
 }
 
 .faq-link:before {
-    font-family: Font Awesome\ 5 Free;
-    font-size: 20px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
     content: "\f056";
+    font-size: 20px;
 }
 
 .faq-link.collapsed:before {
-    font-family: Font Awesome\ 5 Free;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f055";
     font-size: 20px;
-    content:"\f055";
 }
 
 .mainProductLogo {
