--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -12,6 +12,12 @@
     .section-3 {
         display: none;
     }
+    .section-3-border {
+        background: #fff; border-radius: 239px;
+    }
+    .peopleMobile {
+        display: none;
+    }
 }
 
 /*// Medium devices (tablets, 768px and up)*/
@@ -57,6 +63,9 @@
     }*/
     .section-3-border {
         background: #fff; border-radius: 239px;
+    }
+    .peopleMobile {
+        display: block;
     }
 
 }
@@ -112,6 +121,9 @@
     .section-3-border {
         background: #fff; border-radius: 339px;
     }
+    .peopleMobile {
+        display: block;
+    }
 
 }
 
@@ -153,6 +165,9 @@
     }
     .section-3-border {
         background: #fff; border-radius: 439px;
+    }
+    .peopleMobile {
+        display: block;
     }
 
 }
@@ -196,5 +211,7 @@
     .section-3-border {
         background: #fff; border-radius: 439px;
     }
-
+    .peopleMobile {
+        display: block;
+    }
 }
